[package]
name = "catalyst"
version = "0.1.0"
edition = "2024"
description = "Build system with hermetic builds and content-addressed caching"
license = "MIT"
repository = "https://github.com/sudokatie/catalyst"
keywords = ["build", "cache", "hermetic", "parallel"]
categories = ["development-tools::build-utils"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
petgraph = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "catalyst"
path = "src/main.rs"
